fix: 1.67 button being hidden behind footer

--- a/src/ui/containers/Approval/WalletConnect.module.scss
+++ b/src/ui/containers/Approval/WalletConnect.module.scss
@@ -64,6 +64,7 @@
   .buttons {
     flex: 0 0 auto;
     margin-bottom: 20px;
+    padding-bottom: 60px;
     display: flex;
     flex-direction: row;
     .reject {
